@@ -1,3 +1,9 @@
+2003-12-09  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
+
+	* unix/tclUnixPort.h:	#ifdef'd out declarations of errno which
+	* tools/man2tcl.c:	are known to cause problems with recent
+				glibc. [Bug 852369]
+
 2003-12-09  Vince Darley  <vincentdarley@users.sourceforge.net>
 
 	* win/tclWinFile.c: fix to NT file permissions code [Bug 855923]
